--- a/app/src/main/res/layout/fragment_provider_products.xml
+++ b/app/src/main/res/layout/fragment_provider_products.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    tools:context=".ProviderProductsFragment">
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/providerlist"
+    <ListView
+        android:id="@+id/Listofproductforprovider"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
 
+
+</LinearLayout>
